[package]
name = "emmylua_codestyle"
version = "0.1.0"
edition = "2021"
description = "Lua code formatting with EmmyLuaCodeStyle"
license = "MIT"
include = [
    "Cargo.toml",
    "build.rs",
    "src/**",
    "3rd/EmmyLuaCodeStyle/3rd/wildcards/**",
    "3rd/EmmyLuaCodeStyle/CodeFormatCLib/**",
    "3rd/EmmyLuaCodeStyle/CodeFormatCore/**",
    "3rd/EmmyLuaCodeStyle/LuaParser/**",
    "3rd/EmmyLuaCodeStyle/Util/**",
]

[dependencies]
libc = "0.2"

[build-dependencies]
cc = "1.0"
glob = "0.3.0"